# string_interpolation

./: .gitignore  CMakeLists.txt  README.md
include/: string_interpolation.h
test/: .gitignore  CMakeLists.txt
test/src/: example.cpp
